--- a/package.json
+++ b/package.json
@@ -22,15 +22,18 @@
   },
   "homepage": "https://github.com/Nikson69/Nikson69.github.io#readme",
   "devDependencies": {
-    "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12",
+    "webpack": "^5.4.0",
+    "webpack-cli": "^4.2.0",
+    "file-loader": "^6.1.0",
     "babel-loader": "^8.1.0",
+    "css-loader": "^5.0.1",
+    "style-loader": "^2.0.0",
     "@babel/core": "^7.11.6",
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-react": "^7.10.4"
   },
   "dependencies": {
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
   }
 }
