--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "My personal website",
   "main": "index.js",
   "scripts": {
-    "build": "webpack"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "static": "next build && next export"
   },
   "repository": {
     "type": "git",
@@ -21,19 +24,17 @@
     "url": "https://github.com/Nikson69/Nikson69.github.io/issues"
   },
   "homepage": "https://github.com/Nikson69/Nikson69.github.io#readme",
-  "devDependencies": {
-    "webpack": "^5.4.0",
-    "webpack-cli": "^4.2.0",
-    "file-loader": "^6.1.0",
-    "babel-loader": "^8.1.0",
-    "css-loader": "^5.0.1",
-    "style-loader": "^2.0.0",
-    "@babel/core": "^7.11.6",
-    "@babel/preset-env": "^7.11.5",
-    "@babel/preset-react": "^7.10.4"
-  },
   "dependencies": {
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "next": "^11.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
+  },
+  "devDependencies": {
+    "@svgr/webpack": "^5.5.0",
+    "@types/react": "^17.0.14",
+    "@types/react-dom": "^17.0.9",
+    "jest": "^27.0.6",
+    "sass": "^1.35.2",
+    "typescript": "^4.3.5"
   }
 }
