--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "My personal website",
   "main": "index.js",
   "scripts": {
-    "build": "webpack"
+    "dev": "next dev",
+    "start": "next start",
+    "static": "next build && next export"
   },
   "repository": {
     "type": "git",
@@ -22,18 +24,15 @@
   },
   "homepage": "https://github.com/Nikson69/Nikson69.github.io#readme",
   "devDependencies": {
-    "webpack": "^5.4.0",
-    "webpack-cli": "^4.2.0",
-    "file-loader": "^6.1.0",
-    "babel-loader": "^8.1.0",
-    "css-loader": "^5.0.1",
-    "style-loader": "^2.0.0",
-    "@babel/core": "^7.11.6",
-    "@babel/preset-env": "^7.11.5",
-    "@babel/preset-react": "^7.10.4"
+    "@types/node": "18.7.16",
+    "@types/react": "18.0.19",
+    "@types/react-dom": "^18.0.6",
+    "sass": "^1.54.9",
+    "typescript": "4.8.3"
   },
   "dependencies": {
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "next": "^12.3.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
