--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nikson69.github.io",
-  "version": "1.0.0",
-  "description": "My personal website",
+  "version": "1.0.1",
+  "description": "My personal website init on node v 20.5.1",
   "main": "index.js",
   "scripts": {
     "dev": "next dev",
@@ -24,17 +24,25 @@
     "url": "https://github.com/Nikson69/Nikson69.github.io/issues"
   },
   "homepage": "https://github.com/Nikson69/Nikson69.github.io#readme",
-  "dependencies": {
-    "next": "^11.0.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
-  },
   "devDependencies": {
-    "@svgr/webpack": "^5.5.0",
-    "@types/react": "^17.0.14",
-    "@types/react-dom": "^17.0.9",
-    "jest": "^27.0.6",
-    "sass": "^1.35.2",
-    "typescript": "^4.3.5"
+    "@markdoc/markdoc": "^0.3.2",
+    "@markdoc/next.js": "^0.3.3",
+    "@types/node": "^20.6.2",
+    "@types/react": "^18.2.21",
+    "@types/react-dom": "^18.2.7"
+  },
+  "dependencies": {
+    "gray-matter": "^4.0.3",
+    "i18next": "^23.5.1",
+    "next": "^13.4.19",
+    "next-compose-plugins": "^2.2.1",
+    "next-transpile-modules": "^10.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-i18next": "^13.2.2",
+    "date-fns": "^2.30.0",
+    "remark": "^14.0.3",
+    "remark-html": "^15.0.2",
+    "typescript": "^5.2.2"
   }
 }
