--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "@markdoc/next.js": "^0.3.3",
     "@types/node": "^20.6.2",
     "@types/react": "^18.2.21",
-    "@types/react-dom": "^18.2.7"
+    "@types/react-dom": "^18.2.7",
+    "@types/rss": "^0.0.30"
   },
   "dependencies": {
+    "date-fns": "^2.30.0",
     "gray-matter": "^4.0.3",
     "i18next": "^23.5.1",
     "next": "^13.4.19",
@@ -40,9 +42,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.2.2",
-    "date-fns": "^2.30.0",
     "remark": "^14.0.3",
     "remark-html": "^15.0.2",
+    "rss": "^1.2.2",
+    "semantic-ui-css": "^2.5.0",
+    "semantic-ui-react": "^2.1.4",
     "typescript": "^5.2.2"
   }
 }
